--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,12 @@ main {
   flex-direction: column;
   align-items: center;
   color: hsl(0, 0%, 95%);
+  margin-top: 2rem;
 }
 
-h1 {
+h2 {
   font-family: BigShoulders;
+  font-size: 1.8rem;
   font-weight: 700;
   color: hsl(0, 0%, 95%);
   margin-top: 40px;
@@ -69,40 +71,30 @@ p {
 
 /*  ===== Layout ===== */
 
-
-.sedans {
-  display: flex;
-  flex-direction: column;
-  background-color: hsl(31, 77%, 52%);
-  border-radius: 9px 9px 0 0;
-  width: 288px;
-  height: 468px;
-  padding-left: 45px;
-  padding-right: 45px;
-  position: relative;
-}
-
-.suvs {
-  display: flex;
-  flex-direction: column;
-  background-color: hsl(184, 100%, 22%);
-  width: 288px;;
-  height: 468px;
-  padding-left: 45px;
-  padding-right: 45px;
-  position: relative;
-}
-
+.suvs,
+.sedans,
 .luxury {
   display: flex;
   flex-direction: column;
-  background-color: hsl(179, 100%, 13%);
-  border-radius: 0 0 9px 9px;
   width: 288px;
   height: 468px;
   padding-left: 45px;
   padding-right: 45px;
   position: relative;
+}
+
+.sedans {
+  background-color: hsl(31, 77%, 52%);
+  border-radius: 9px 9px 0 0;
+}
+
+.suvs {
+  background-color: hsl(184, 100%, 22%);
+}
+
+.luxury {
+  background-color: hsl(179, 100%, 13%);
+  border-radius: 0 0 9px 9px;
 }
 
 footer {
@@ -125,49 +117,41 @@ button {
   font-family: Lexend;
   border: none;
   cursor: pointer;
+  position: absolute;
+  left: 45px;
+  bottom: 45px;
+  margin-top: 68px;
 }
 
 .sedans button {
-  margin-top: 68px;
   color: hsl(31, 77%, 52%);
-  position: absolute;
-  left: 45px;
-  bottom: 45px;
 }
 
 .suvs button {
-  margin-top: 68px;
   color: hsl(184, 100%, 22%);
-  position: absolute;
-  left: 45px;
-  bottom: 45px;
 }
 
 .luxury button {
-  margin-top: 68px;
   color: hsl(179, 100%, 13%);
-  position: absolute;
-  left: 45px;
-  bottom: 45px;
 }
 
 .sedans button:hover,
 .sedans button:focus {
   background-color: hsl(31, 77%, 52%);
-  color: white;
-  border: 2px solid white;
 }
 
 .suvs button:hover,
 .suvs button:focus {
   background-color: hsl(184, 100%, 22%);
-  color: white;
-  border: 2px solid white;
 }
 
 .luxury button:hover,
 .luxury button:focus {
   background-color: hsl(179, 100%, 13%);
+}
+
+button:hover,
+button:focus {
   color: white;
   border: 2px solid white;
 }
@@ -180,7 +164,8 @@ button {
   main {
     flex-direction: row;
     justify-content: center;
-    height: 100vh;
+    min-height: 92vh;
+    margin-top: auto;
   }
 
   .sedans {
